--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ html, body, #root {
   cursor: pointer;
   border-radius: 5px;
   max-width: 100%;
-  margin: 10px 0;
+  margin: 10px 10px;
   transition: background-color 0.3s ease;
 }
 
